Lighthouse Updates accessibility, seo, performance

--- a/about-me.html
+++ b/about-me.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sarah's Portfolio - About Sarah</title>
+    <meta name='description' content='All about Sarah and her software development skills. Including Javascript, React, MongoDB, Bootstrap, Express, SASS and more!'>
+
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DX2F5RZ4NQ"></script>
@@ -39,12 +41,12 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="about-me.html">About Me</a></li>
 
-                    <li class=nav-item"><a href="https://www.linkedin.com/in/sloutrel" target="_blank"><i
-                                class="fab icon fa-linkedin nav-link"></i></a>
-                    </li>
-                    <li class=nav-item"><a href="https://github.com/sloutrel" target="_blank"><i
-                                class="fab icon fa-github nav-link"></i></a></li>
-                    </li>
+                        <li class=nav-item"><a href="https://www.linkedin.com/in/sloutrel" rel="noopener noreferrer" aria-label="Sarah's Linkedin" target="_blank"><i
+                            class="fab icon fa-linkedin nav-link"></i></a>
+                </li>
+                <li class=nav-item"><a href="https://github.com/sloutrel" rel="noopener noreferrer" aria-label="Sarah's Github" target="_blank"><i
+                            class="fab icon fa-github nav-link"></i></a></li>
+                </li>
                 </ul>
             </div>
         </div>
@@ -53,8 +55,8 @@
         <h1>About Me <span class="heading__sub">Look, I learned some things!</span></h1>
         <p class="header__content"><span class="welcome">Hi, my name is Sarah!</span> I am a self-taught full-stack developer with a passion for user experience. Though I am self-taught, I took no shortcuts - starting with the fundamentals (e.g. HTML5, CSS3, & JavaScript) before advancing to frameworks and libraries.</p>
         <div class="buttons row justify-content-center">
-            <div class="button btn--main col-md-4"><a href="https://www.linkedin.com/in/sloutrel" target="__blank" class="btn">Connect on LinkedIn</a></div>
-            <div class="button btn--sub col-md-4"><a href="https://github.com/sloutrel" target="__blank" class="btn">See my source code</a></div>
+            <div class="button btn--main col-md-4"><a href="https://www.linkedin.com/in/sloutrel" rel="noopener noreferrer" target="__blank" class="btn">Connect on LinkedIn</a></div>
+            <div class="button btn--sub col-md-4"><a href="https://github.com/sloutrel" rel="noopener noreferrer" target="__blank" class="btn">See my source code</a></div>
         </div>
 </header>
 <main>
@@ -123,15 +125,15 @@
     <div class=" trophies-container">
         <h3 class="trophies">Also, check out my sweet trophies (more to come):</h3>
         <ul class="list trophies-list">
-            <li><a href="https://www.udemy.com/certificate/UC-33e37863-dee4-4453-a44f-5105b368f1b5/" target ="_blank">Web Dev Bootcamp 2021 - Udemy</a>
+            <li><a href="https://www.udemy.com/certificate/UC-33e37863-dee4-4453-a44f-5105b368f1b5/" rel="noopener noreferrer" target ="_blank">Web Dev Bootcamp 2021 - Udemy</a>
             </li>
-            <li><a href="https://www.freecodecamp.org/certification/fcc439a53fa-b2b5-441b-88e8-4a48047a48f5/javascript-algorithms-and-data-structures" target ="_blank">Javascript Algorithms and Data Stuctures - FCC</a>
+            <li><a href="https://www.freecodecamp.org/certification/fcc439a53fa-b2b5-441b-88e8-4a48047a48f5/javascript-algorithms-and-data-structures" rel="noopener noreferrer" target ="_blank">Javascript Algorithms and Data Stuctures - FCC</a>
             </li>
-            <li><a href="https://www.freecodecamp.org/certification/fcc439a53fa-b2b5-441b-88e8-4a48047a48f5/responsive-web-design" target ="_blank">Responsive Web Design - FCC</a>
+            <li><a href="https://www.freecodecamp.org/certification/fcc439a53fa-b2b5-441b-88e8-4a48047a48f5/responsive-web-design" rel="noopener noreferrer" target ="_blank">Responsive Web Design - FCC</a>
             </li>
-            <li><a href="https://www.udemy.com/certificate/UC-adbe38b5-927d-4145-b313-839401ae5d24/" target ="_blank">Agile Scrum Mastery - Udemy</a>
+            <li><a href="https://www.udemy.com/certificate/UC-adbe38b5-927d-4145-b313-839401ae5d24/" rel="noopener noreferrer" target ="_blank">Agile Scrum Mastery - Udemy</a>
             </li>
-            <li><a href="https://github.com/publiclab" target ="_blank">Open Source Contributor - Public Lab Spectral Workbench, 2021. Ruby testing data.</a>
+            <li><a href="https://github.com/publiclab" rel="noopener noreferrer" target ="_blank">Open Source Contributor - Public Lab Spectral Workbench, 2021. Ruby testing data.</a>
             </li>
         </ul>
     </div>
