--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sarah's Portfolio - Home</title>
+    <meta name='description' content='An introduction to Sarah and her portfolio of apps ranging from large to small using Javascript, React, MongoDB, Bootstrap, Express, SASS and more!'>
+
     <meta property='og:title' content="Sarah's Portfolio">
     <meta property='og:image' content='https://sloutrel.github.io/imgs/portfolio-feat-1.jpg'>
-    <meta property='og:description' content='A collection of apps ranging from large to small using Javascript, React, MongoDB, Bootstrap, Express, SASS and more!'>
+    <meta property='og:description' content='An introduction to Sarah and her portfolio of apps ranging from large to small using Javascript, React, MongoDB, Bootstrap, Express, SASS and more!'>
     <meta property='og:url' content='http://sloutrel.github.io'>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -42,13 +44,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="about-me.html">About Me</a></li>
 
-                    <li class=nav-item"><a href="https://www.linkedin.com/in/sloutrel" target="_blank"><i
+                    <li class=nav-item"><a href="https://www.linkedin.com/in/sloutrel" rel="noopener noreferrer" aria-label="Sarah's Linkedin" target="_blank"><i
                                 class="fab icon fa-linkedin nav-link"></i></a>
                     </li>
-                    <li class=nav-item"><a href="https://github.com/sloutrel" target="_blank"><i
+                    <li class=nav-item"><a href="https://github.com/sloutrel" rel="noopener noreferrer" aria-label="Sarah's Github" target="_blank"><i
                                 class="fab icon fa-github nav-link"></i></a></li>
                     </li>
                 </ul>
+
             </div>
         </div>
     </nav>
@@ -64,10 +67,10 @@
         </div>
         <div class="features container">
             <div class="yelpcat feats__row row">
-                <h4 class="heading__features">YelpCat - <span class="heading__features--sub">A Yelp-like clone for animal adoption</span></h4>
+                <h2 class="heading__features">YelpCat - <span class="heading__features--sub">A Yelp-like clone for animal adoption</span></h2>
                 <div class="app-about__heading col-md-6">
                 <p class="about-app">I started making this app because I love animals and am not completely happy with the adoption sites out there. This is just the framework and is a passion project/work-in progress. UI is just the framework. <span class="note">*note, this is on the free tier of Heroku and may take a bit longer to load as a result</span></p>
-                    <div class="yelpcat-btn btn"><a href="https://secret-tor-03211.herokuapp.com/" class="feat btn btn-outline" target="_blank">Check out YelpCat</a></div>
+                    <div class="yelpcat-btn btn"><a href="https://secret-tor-03211.herokuapp.com/" rel="noopener noreferrer" class="feat btn btn-outline" target="_blank">Check out YelpCat</a></div>
                 </div>
                 <div class="features__tools col"><span class="feats__title">Tools used:</span> 
                     <ul class="features__tools-list">
@@ -90,10 +93,10 @@
                 </div>
             </div>
             <div class="saplants feats__row row">
-                <h4 class="heading__features">Saplants - <span class="heading__features--sub">A plant subscription box landing page demo</span></h4>
+                <h2 class="heading__features">Saplants - <span class="heading__features--sub">A plant subscription box landing page demo</span></h2>
                 <div class="img col-md-6">
                 <p class="about-app">A demo page focused on visuals with basic funtion that uses pure SASS/CSS</p>
-                    <div class="saplants-btn btn"><a href="https://sloutrel.github.io/saplants/" class="feat btn btn-outline" target="_blank">Check out Saplants</a></div>
+                    <div class="saplants-btn btn"><a href="https://sloutrel.github.io/saplants/" rel="noopener noreferrer" class="feat btn btn-outline" target="_blank">Check out Saplants</a></div>
                 </div>
                 <div class="features__tools col"><span class="feats__title">Tools used:</span> 
                     <ul class="features__tools-list">
@@ -113,11 +116,11 @@
                 </div>
             </div>
             <div class="mtg feats__row row">
-                <h4 class="heading__features">Magic the Gathering score keeper - <span class="heading__features--sub">A score keeper for MtG</span></h4>
+                <h2 class="heading__features">Magic the Gathering score keeper - <span class="heading__features--sub">A score keeper for MtG</span></h2>
                 <div class="img col-md-6">
                 <p class="about-app">This app was created because I found it cumbersome to play the game using the standard 3-sided die to count lives.</p>
 
-                    <div class="mtg-btn btn"><a href="https://sloutrel.github.io/magic-react/" class="feat btn btn-outline" target="_blank">Check out the app</a></div>
+                    <div class="mtg-btn btn"><a href="https://sloutrel.github.io/magic-react/" rel="noopener noreferrer" class="feat btn btn-outline" target="_blank">Check out the app</a></div>
                 </div>
                 <div class="features__tools col"><span class="feats__title">Tools used:</span> 
                     <ul class="features__tools-list">
