--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sarah's Portfolio - Apps</title>
+    <meta name='description' content='A collection of apps ranging from large to small using Javascript, React, MongoDB, Bootstrap, Express, SASS and more!'>
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DX2F5RZ4NQ"></script>
@@ -41,10 +42,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="about-me.html">About Me</a>
                     </li>
-                    <li class=nav-item"><a href="https://www.linkedin.com/in/sloutrel" target="_blank"><i
+                    <li class=nav-item"><a href="https://www.linkedin.com/in/sloutrel" rel="noopener noreferrer" aria-label="Sarah's Linkedin" target="_blank"><i
                             class="fab icon fa-linkedin nav-link"></i></a>
                     </li>
-                    <li class=nav-item"><a href="https://github.com/sloutrel" target="_blank"><i
+                    <li class=nav-item"><a href="https://github.com/sloutrel" rel="noopener noreferrer" aria-label="Sarah's Github" target="_blank"><i
                             class="fab icon fa-github nav-link"></i></a>
                     </li>
                     </li>
@@ -82,7 +83,7 @@
       ></script>
         <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
         <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
-        <script src="cards.js"></script>
+        <script src="cards.js" defer></script>
 </body>
 
 </html>
