--- a/about-me.html
+++ b/about-me.html
@@ -53,14 +53,14 @@
     </nav>
 <header id="h-about">
         <h1>About Me <span class="heading__sub">Look, I learned some things!</span></h1>
-        <p class="header__content"><span class="welcome">Hi, my name is Sarah!</span> I am a self-taught full-stack developer with a passion for user experience. Though I am self-taught, I took no shortcuts - starting with the fundamentals (e.g. HTML5, CSS3, & JavaScript) before advancing to frameworks and libraries.</p>
+        <p class="header__content"><span class="welcome">Hi, my name is Sarah!</span> I am a software developer with a passion for user experience.</p>
         <div class="buttons row justify-content-center">
             <div class="button btn--main col-md-4"><a href="https://www.linkedin.com/in/sloutrel" rel="noopener noreferrer" target="__blank" class="btn">Connect on LinkedIn</a></div>
             <div class="button btn--sub col-md-4"><a href="https://github.com/sloutrel" rel="noopener noreferrer" target="__blank" class="btn">See my source code</a></div>
         </div>
 </header>
 <main>
-    <h2 class="heading__secondary">Completed courses and competencies</h2>
+    <h2 class="heading__secondary">Competencies</h2>
     <div class="container learning-container">
         <div class="row align-items-start justify-content-center row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5 learning-row">
             <div class="col card">
@@ -70,7 +70,7 @@
                         <li class="list-item"><a href="https://www.javascript.com/" target="__blank">Javascript</a></li>
                         <li class="list-item"><a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" rel="noopener noreferrer">HTML5 </a></li>
                         <li class="list-item"><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank" rel="noopener noreferrer">Responsive CSS3</a></li>
-                        <li class="list-item"><a href="https://www.typescriptlang.org/" target="_blank" rel="noopener noreferrer">Typescript</a></li>
+                        <!-- <li class="list-item"><a href="https://www.typescriptlang.org/" target="_blank" rel="noopener noreferrer">Typescript</a></li> -->
                         <li class="list-item"><a href="https://www.ruby-lang.org/en/" target="_blank" rel="noopener noreferrer">Ruby</a></li>
                     </ul>
                 </div>
@@ -82,10 +82,14 @@
                         <li class="list-item"><a href="https://reactjs.org/" target="_blank" rel="noopener noreferrer">React</a></li>
                         <li class="list-item"><a href="https://expressjs.com/" target="_blank" rel="noopener noreferrer">Express</a> & <a href="https://ejs.co/" target="_blank" rel="noopener noreferrer">EJS</a></li>
                         <li class="list-item"><a href="https://getbootstrap.com/" target="_blank" rel="noopener noreferrer">Bootstrap</a></li>  
+                        <li class="list-item"><a href="https://mui.com/" target="_blank" rel="noopener noreferrer">Material UI</a></li>  
                         <li class="list-item"><a href="https://sass-lang.com/" target="_blank" rel="noopener noreferrer">SASS</a></li>  
                         <li class="list-item"><a href="https://nodejs.org/" target="_blank" rel="noopener noreferrer">Node.js</a> & <a href="https://www.npmjs.com/" target="_blank" rel="noopener noreferrer">npm</a> </li>
+                        <li class="list-item"><a href="https://reactrouter.com/" target="_blank" rel="noopener noreferrer">React Router</a></li>
+                        <li class="list-item"><a href="https://nextjs.org/" target="_blank" rel="noopener noreferrer">Next.js</a></li>
                         <li class="list-item"><a href="https://kaboomjs.org/" target="_blank" rel="noopener noreferrer">Kaboom.js</a></li>
                         <li class="list-item"><a href="https://jquery.com/" target="_blank" rel="noopener noreferrer">jQuery</a></li>
+                        <li class="list-item"><a href="https://vuejs.org/" target="_blank" rel="noopener noreferrer">Vue</a></li>
                     </ul>
                 </div>
             </div>
@@ -104,6 +108,7 @@
                         <li class="list-item"><a href="https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API" target="_blank" rel="noopener noreferrer">Canvas API</a></li>
                         <li class="list-item"><a href="https://axios-http.com/docs/intro" target="_blank" rel="noopener noreferrer">Axios</a> & <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/AJAX/" target="_blank" rel="noopener noreferrer">AJAX</a> </li>
                         <li class="list-item"><a href="https://analytics.google.com/analytics/web/" target="_blank" rel="noopener noreferrer">Google Analytics</a> </li>
+                        <li class="list-item"><a href="https://www.vagrantup.com/" target="_blank" rel="noopener noreferrer">Vagrant</a> </li>
                     </ul>
                 </div>
             </div>
@@ -111,11 +116,11 @@
                 <h3 class="learning-categories text-center card-title">Currently learning</h3>
                 <div class="card-body">
                     <ul class="list"> 
-                        <li class="list-item"><a href="https://nextjs.org/" target="_blank" rel="noopener noreferrer">Next.js</a></li>
-                        <li class="list-item"><a href="https://reactnative.dev/" target="_blank" rel="noopener noreferrer">React Native</a></li>
-                        <li class="list-item"><a href="https://redux.js.org/" target="_blank" rel="noopener noreferrer">Redux</a></li>
-                        <li class="list-item"><a href="https://rubyonrails.org/" target="_blank" rel="noopener noreferrer">Ruby on Rails</a></li>
-                        <li class="list-item"><a href="https://www.postman.com/" target="_blank" rel="noopener noreferrer">Postman</a></li>
+                        <li class="list-item"><a href="https://www.typescriptlang.org/" target="_blank" rel="noopener noreferrer">Typescript</a></li>
+                        <!-- <li class="list-item"><a href="https://reactnative.dev/" target="_blank" rel="noopener noreferrer">React Native</a></li> -->
+                        <!-- <li class="list-item"><a href="https://redux.js.org/" target="_blank" rel="noopener noreferrer">Redux</a></li> -->
+                        <!-- <li class="list-item"><a href="https://rubyonrails.org/" target="_blank" rel="noopener noreferrer">Ruby on Rails</a></li> -->
+                        <!-- <li class="list-item"><a href="https://www.postman.com/" target="_blank" rel="noopener noreferrer">Postman</a></li> -->
                     </ul>
                 </div>
             </div>
@@ -125,6 +130,10 @@
     <div class=" trophies-container">
         <h3 class="trophies">Also, check out my sweet trophies (more to come):</h3>
         <ul class="list trophies-list">
+            <li><a href="https://www.udemy.com/certificate/UC-90ca34e1-d305-45de-944d-fe4fc58ed163/" rel="noopener noreferrer" target ="_blank">Mastering Typescript 2022 - Udemy</a>
+            </li>
+            <li><a href="https://www.udemy.com/certificate/UC-827bb550-734c-435b-9554-0296a585b9ee/" rel="noopener noreferrer" target ="_blank">Modern React Bootcamp - Udemy</a>
+            </li>
             <li><a href="https://www.udemy.com/certificate/UC-33e37863-dee4-4453-a44f-5105b368f1b5/" rel="noopener noreferrer" target ="_blank">Web Dev Bootcamp 2021 - Udemy</a>
             </li>
             <li><a href="https://www.freecodecamp.org/certification/fcc439a53fa-b2b5-441b-88e8-4a48047a48f5/javascript-algorithms-and-data-structures" rel="noopener noreferrer" target ="_blank">Javascript Algorithms and Data Stuctures - FCC</a>
@@ -139,7 +148,7 @@
     </div>
 </main>
 <footer class="footer">
-    <p>Copyright &copy; Sarah Loutrel 2021</p>
+    <p>Copyright &copy; Sarah Loutrel 2023</p>
 </footer>
 <script src="app.js"></script>
 <script
