--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
     </nav>
     <header>
-        <h1 class="heading__primary">Sarah Loutrel <span class="heading__primary--sub">Full-stack web developer</span></h1>
+        <h1 class="heading__primary">Sarah Loutrel <span class="heading__primary--sub">Frontend Engineer</span></h1>
     </header>
     <main>
         <div class="cta container">
