about me updates

--- a/about-me.html
+++ b/about-me.html
@@ -53,7 +53,7 @@
     </nav>
 <header id="h-about">
         <h1>About Me <span class="heading__sub">Look, I learned some things!</span></h1>
-        <p class="header__content"><span class="welcome">Hi, my name is Sarah!</span> I am a software developer with a passion for user experience.</p>
+        <p class="header__content"><span class="welcome">Hi, my name is Sarah!</span> I'm a software developer with a passion for user experience.</p>
         <div class="buttons row justify-content-center">
             <div class="button btn--main col-md-4"><a href="https://www.linkedin.com/in/sloutrel" rel="noopener noreferrer" target="__blank" class="btn">Connect on LinkedIn</a></div>
             <div class="button btn--sub col-md-4"><a href="https://github.com/sloutrel" rel="noopener noreferrer" target="__blank" class="btn">See my source code</a></div>
@@ -68,9 +68,9 @@
                 <div class="card-body">
                     <ul class="list">
                         <li class="list-item"><a href="https://www.javascript.com/" target="__blank">Javascript</a></li>
+                        <li class="list-item"><a href="https://www.typescriptlang.org/" target="_blank" rel="noopener noreferrer">Typescript</a></li>
                         <li class="list-item"><a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" rel="noopener noreferrer">HTML5 </a></li>
                         <li class="list-item"><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank" rel="noopener noreferrer">Responsive CSS3</a></li>
-                        <!-- <li class="list-item"><a href="https://www.typescriptlang.org/" target="_blank" rel="noopener noreferrer">Typescript</a></li> -->
                         <li class="list-item"><a href="https://www.ruby-lang.org/en/" target="_blank" rel="noopener noreferrer">Ruby</a></li>
                     </ul>
                 </div>
@@ -80,16 +80,16 @@
                 <div class="card-body">
                     <ul class="list">
                         <li class="list-item"><a href="https://reactjs.org/" target="_blank" rel="noopener noreferrer">React</a></li>
+                        <li class="list-item"><a href="https://nextjs.org/" target="_blank" rel="noopener noreferrer">Next.js</a></li>
+                        <li class="list-item"><a href="https://vuejs.org/" target="_blank" rel="noopener noreferrer">Vue</a></li>
                         <li class="list-item"><a href="https://expressjs.com/" target="_blank" rel="noopener noreferrer">Express</a> & <a href="https://ejs.co/" target="_blank" rel="noopener noreferrer">EJS</a></li>
+                        <li class="list-item"><a href="https://nodejs.org/" target="_blank" rel="noopener noreferrer">Node.js</a> & <a href="https://www.npmjs.com/" target="_blank" rel="noopener noreferrer">npm</a> </li>
+                        <li class="list-item"><a href="https://reactrouter.com/" target="_blank" rel="noopener noreferrer">React Router</a></li>
                         <li class="list-item"><a href="https://getbootstrap.com/" target="_blank" rel="noopener noreferrer">Bootstrap</a></li>  
                         <li class="list-item"><a href="https://mui.com/" target="_blank" rel="noopener noreferrer">Material UI</a></li>  
                         <li class="list-item"><a href="https://sass-lang.com/" target="_blank" rel="noopener noreferrer">SASS</a></li>  
-                        <li class="list-item"><a href="https://nodejs.org/" target="_blank" rel="noopener noreferrer">Node.js</a> & <a href="https://www.npmjs.com/" target="_blank" rel="noopener noreferrer">npm</a> </li>
-                        <li class="list-item"><a href="https://reactrouter.com/" target="_blank" rel="noopener noreferrer">React Router</a></li>
-                        <li class="list-item"><a href="https://nextjs.org/" target="_blank" rel="noopener noreferrer">Next.js</a></li>
                         <li class="list-item"><a href="https://kaboomjs.org/" target="_blank" rel="noopener noreferrer">Kaboom.js</a></li>
                         <li class="list-item"><a href="https://jquery.com/" target="_blank" rel="noopener noreferrer">jQuery</a></li>
-                        <li class="list-item"><a href="https://vuejs.org/" target="_blank" rel="noopener noreferrer">Vue</a></li>
                     </ul>
                 </div>
             </div>
@@ -116,11 +116,7 @@
                 <h3 class="learning-categories text-center card-title">Currently learning</h3>
                 <div class="card-body">
                     <ul class="list"> 
-                        <li class="list-item"><a href="https://www.typescriptlang.org/" target="_blank" rel="noopener noreferrer">Typescript</a></li>
-                        <!-- <li class="list-item"><a href="https://reactnative.dev/" target="_blank" rel="noopener noreferrer">React Native</a></li> -->
-                        <!-- <li class="list-item"><a href="https://redux.js.org/" target="_blank" rel="noopener noreferrer">Redux</a></li> -->
-                        <!-- <li class="list-item"><a href="https://rubyonrails.org/" target="_blank" rel="noopener noreferrer">Ruby on Rails</a></li> -->
-                        <!-- <li class="list-item"><a href="https://www.postman.com/" target="_blank" rel="noopener noreferrer">Postman</a></li> -->
+                        <li class="list-item"><a href="https://www.python.org/" target="_blank" rel="noopener noreferrer">Python 3</a></li>
                     </ul>
                 </div>
             </div>
