--- a/index.html
+++ b/index.html
@@ -92,26 +92,26 @@
                     </ul>
                 </div>
             </div>
-            <div class="saplants feats__row row">
-                <h2 class="heading__features">Saplants - <span class="heading__features--sub">A plant subscription box landing page demo</span></h2>
+            <div class="palette feats__row row">
+                <h2 class="heading__features">Palette Maker - <span class="heading__features--sub">A tool to create and save color palettes</span></h2>
                 <div class="img col-md-6">
-                <p class="about-app">A demo page focused on visuals with basic funtion that uses pure SASS/CSS</p>
-                    <div class="saplants-btn btn"><a href="https://sloutrel.github.io/saplants/" rel="noopener noreferrer" class="feat btn btn-outline" target="_blank">Check out Saplants</a></div>
+                <p class="about-app">Course project with added features, like the ability to edit and delete, and written using hooks instead of class components</p>
+                    <div class="palette-btn btn"><a href="https://sloutrel.github.io/color-palette/" rel="noopener noreferrer" class="feat btn btn-outline" target="_blank">Check out the app</a></div>
                 </div>
                 <div class="features__tools col"><span class="feats__title">Tools used:</span> 
                     <ul class="features__tools-list">
-                        <li class="tools-list-items">SASS</li>
-                        <li class="tools-list-items">CSS</li>
-                        <li class="tools-list-items">HTML</li>
+                        <li class="tools-list-items">React</li>
+                        <li class="tools-list-items">Material UI</li>
+                        <li class="tools-list-items">Drag and Drop - DnD</li>
                     </ul>
                 </div>
                 <div class="features__feats col"><span class="feats__title">Features:</span> 
                     <ul class="features__feats-list">
-                        <li class="feats-list-items">Animations</li>
-                        <li class="feats-list-items">Gradients</li>
-                        <li class="feats-list-items">Background videos</li>
-                        <li class="feats-list-items">Popups and forms</li>
-                        <li class="feats-list-items">Responsive design</li>
+                        <li class="feats-list-items">Local Storage</li>
+                        <li class="feats-list-items">Emoji Picker</li>
+                        <li class="feats-list-items">Drag and Drop</li>
+                        <li class="feats-list-items">Clipboard Copy</li>
+                        <li class="feats-list-items">Color Gradient Views</li>
                     </ul>
                 </div>
             </div>
@@ -120,21 +120,21 @@
                 <div class="img col-md-6">
                 <p class="about-app">This app was created because I found it cumbersome to play the game using the standard 3-sided die to count lives.</p>
 
-                    <div class="mtg-btn btn"><a href="https://sloutrel.github.io/magic-react/" rel="noopener noreferrer" class="feat btn btn-outline" target="_blank">Check out the app</a></div>
+                    <div class="mtg-btn btn"><a href="https://sloutrel.github.io/magic-ts/" rel="noopener noreferrer" class="feat btn btn-outline" target="_blank">Check out the app</a></div>
                 </div>
                 <div class="features__tools col"><span class="feats__title">Tools used:</span> 
                     <ul class="features__tools-list">
                         <li class="tools-list-items">React</li>
-                        <li class="tools-list-items">Javascript</li>
+                        <li class="tools-list-items">Typescript</li>
                         <li class="tools-list-items">Google Fonts</li>
-                        <li class="tools-list-items">Bootstrap</li>
+                        <li class="tools-list-items">Pico</li>
                     </ul>
                 </div>
                 <div class="features__feats col"><span class="feats__title">Features:</span> 
                     <ul class="features__feats-list">
                         <li class="feats-list-items">Multiple players</li>
-                        <li class="feats-list-items">Starting life selector</li>
-                        <li class="feats-list-items">Unique winning and losing quotes</li>
+                        <li class="feats-list-items">Starting game selector</li>
+                        <li class="feats-list-items">Additional player counters</li>
                         <li class="feats-list-items">Keep playing until all lose</li>
                     </ul>
                 </div>
@@ -143,7 +143,7 @@
     </div>
     </main>
     <footer class="footer">
-        <p>Copyright &copy; Sarah Loutrel 2021</p>
+        <p>Copyright &copy; Sarah Loutrel 2023</p>
     </footer>
         <script src="app.js"></script>
         <script
